# rnacentral-export

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-redis  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: celery.py  config.py  database.py  examples.fasta  examples.fasta.ssi  logger.py  main.py  tasks.py  tests.py
kubernetes/: cleanup-pvc.yaml  export-results-volume-pvc.yaml  logs-volume-pvc.yaml  namespace.yaml  rnacentral-ids-volume-pvc.yaml
kubernetes/helm/: Chart.yaml  values.hx.yaml  values.yaml
kubernetes/helm/templates/: fastapi.yaml  redis.yaml  worker.yaml
scripts/: Dockerfile  cleanup.sh
