[tool.poetry]
name = "rnacentral-export"
version = "0.1.0"
description = "Microservice to export RNAcentral data"
authors = ["Carlos <cribas@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
celery = "^5.4.0"
redis = "^5.0.6"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
